--- a/css/style.css
+++ b/css/style.css
@@ -8363,6 +8363,12 @@ h1, h2, h3, h4, h5,
   font-size: 24px;
   text-transform: uppercase; }
 
+.hero{
+  overflow-y: auto !important;
+  -webkit-overflow-scrolling: touch !important;
+  min-height: 100vh !important;
+}
+
 .hero h3.vr {
   -webkit-writing-mode: vertical-lr;
   -ms-writing-mode: tb-lr;
@@ -8390,6 +8396,8 @@ h1, h2, h3, h4, h5,
       display: none; } }
 
 .owl-carousel {
+  touch-action: auto !important;
+  overflow: visible !important;
   position: relative; }
   .owl-carousel .owl-item {
     opacity: .4; }
