--- a/css/style.css
+++ b/css/style.css
@@ -9596,7 +9596,7 @@ textarea.form-control {
       font-style: italic; }
 
 #ftco-loader {
-  position: fixed;
+  position: relative;
   width: 96px;
   height: 96px;
   left: 50%;
@@ -9620,7 +9620,7 @@ textarea.form-control {
   left: 0;
   top: 0;
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   -webkit-transform: none;
   -ms-transform: none;
   transform: none;
