--- a/css/style.css
+++ b/css/style.css
@@ -8363,13 +8363,10 @@ h1, h2, h3, h4, h5,
   font-size: 24px;
   text-transform: uppercase; }
 
-.hero{
+.hero h3.vr {
   overflow-y: auto !important;
   -webkit-overflow-scrolling: touch !important;
   min-height: 100vh !important;
-}
-
-.hero h3.vr {
   -webkit-writing-mode: vertical-lr;
   -ms-writing-mode: tb-lr;
   writing-mode: vertical-lr;
@@ -8383,7 +8380,6 @@ h1, h2, h3, h4, h5,
   position: absolute;
   top: 0;
   left: 4em;
-  height: 100%;
   text-transform: uppercase;
   font-weight: 500;
   letter-spacing: 5px;
@@ -8633,7 +8629,7 @@ h1, h2, h3, h4, h5,
 
 .hero-wrap {
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   position: inherit;
   background-size: cover;
   background-repeat: no-repeat; }
